--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </a>
           <ul class="links list ">
             <li class="link-item">
-              <a class="navigation" href="Студия">Студия</a>
+              <a class="navigation" href="./index.html">Студия</a>
             </li>
             <li class="link-item">
               <a class="navigation" href="./portfolio.html">Портфолио</a>
@@ -42,7 +42,7 @@
           </li>
           <li class="info"> 
             <a class="contact" href="tel:+380961111111">
-              <svg class="icon" width="16" height="12"> 
+              <svg class="icon" width="10" height="16"> 
                 <use href="./images/icon/sprite.svg#phone"></use> 
             </svg> +38 096 111 11 11
           </a>
