--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
           </a>
           <ul class="links list ">
             <li class="link-item">
-              <a class="navigation" href="Студия">Студия</a>
+              <a class="navigation" href="./index.html">Студия</a>
             </li>
             <li class="link-item">
               <a class="navigation" href="./portfolio.html">Портфолио</a>
@@ -30,23 +30,23 @@
               <a class="navigation" href="Контакты">Контакты</a>
             </li>
           </ul>
-        </nav>  
-        <ul class="address list">
-          <li class="info">
-            <a class="contact" href="mailto:info@devstudio.com">
-              <svg class="icon" width="16" height="12"> 
-                <use href="./images/icon/sprite.svg#envelope"></use> 
-            </svg>info@devstudio.com
+        </nav> 
+          <ul class="address list">
+            <li class="info">
+              <a class="contact" href="mailto:info@devstudio.com">
+                <svg class="icon" width="16" height="12"> 
+                  <use href="./images/icon/sprite.svg#envelope"></use> 
+              </svg>info@devstudio.com
+              </a>
+            </li>
+            <li class="info"> 
+              <a class="contact" href="tel:+380961111111">
+                <svg class="icon" width="10" height="16"> 
+                  <use href="./images/icon/sprite.svg#phone"></use> 
+              </svg> +38 096 111 11 11
             </a>
-          </li>
-          <li class="info"> 
-            <a class="contact" href="tel:+380961111111">
-              <svg class="icon" width="16" height="12"> 
-                <use href="./images/icon/sprite.svg#phone"></use> 
-            </svg> +38 096 111 11 11
-          </a>
-           </li>
-        </ul>   
+             </li>
+          </ul>        
       </div>
       
     </header>
@@ -74,63 +74,63 @@
               </ul>
               <ul class="image-list">
                   <li class="image-item">
-                    <a class="project-link" href="">
+                    <a class="project-link">
                       <img src="./images/port (9).jpg" alt="Технокряк" width="370" height="294">
                       <h2 class="image-name">Технокряк</h2>
                       <p class="type">Веб-сайт</p>
                     </a>
                   </li>
                   <li class="image-item">
-                    <a class="project-link" href="">
+                    <a class="project-link">
                     <img src="./images/port (8).jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                     <h2 class="image-name">Постер New Orlean vs Golden Star </h2>
                     <p class="type">Дизайн</p>
                     </a>
                   </li>
                   <li class="image-item">
-                    <a class="project-link" href="">
+                    <a class="project-link" >
                     <img src="./images/port (7).jpg" alt="Ресторан Seafood" width="370" height="294">
                     <h2 class="image-name">Ресторан Seafood</h2>
                     <p class="type">Приложение</p> 
                     </a>
                   </li>
                   <li class="image-item">
-                    <a class="project-link" href="">
+                    <a class="project-link">
                     <img src="./images/port (6).jpg" alt="Проект Prime" width="370" height="294">
                     <h2 class="image-name">Проект Prime</h2>
                     <p class="type">Маркетинг</p>
                     </a>
                 </li>
                 <li class="image-item">
-                  <a class="project-link" href="">
+                  <a class="project-link">
                   <img src="./images/port (5).jpg" alt="Проект Boxes" width="370" height="294">
                   <h2 class="image-name">Проект Boxes </h2>
                   <p class="type">Приложение</p>
                   </a>
                 </li>
                 <li class="image-item">
-                  <a class="project-link" href="">
+                  <a class="project-link">
                   <img src="./images/port (1).jpg" alt="Inspiration has no Borders" width="370" height="294">
                   <h2 class="image-name">Inspiration has no Borders</h2>
                   <p class="type">Веб-сайт</p> 
                   </a>
                 </li>
                 <li class="image-item">
-                  <a class="project-link" href="">
+                  <a class="project-link" >
                   <img src="./images/port (4).jpg" alt="Издание Limited Edition" width="370" height="294">
                   <h2 class="image-name">Издание Limited Edition</h2>
                   <p class="type">Дизайн</p>
                   </a>
               </li>
               <li class="image-item">
-                <a class="project-link" href="">
+                <a class="project-link" >
                 <img src="./images/port (3).jpg" alt="Проект LAB" width="370" height="294">
                 <h2 class="image-name">Проект LAB </h2>
                 <p class="type">Маркетинг</p>
                 </a>
               </li>
               <li class="image-item">
-                <a class="project-link" href="">
+                <a class="project-link">
                 <img src="./images/port (2).jpg" alt="Growing Business" width="370" height="294">
                 <h2 class="image-name">Growing Business</h2>
                 <p class="type">Приложение</p> 
