--- a/index.html
+++ b/index.html
@@ -122,12 +122,21 @@
             <ul class="task-list">
               <li class="list-item">
                <img src="./images/img.jpg" alt="написание кода" width="370" height="294">
+               <div class="overlay-apps">
+                 <p class="app">Десктопные приложения</p>
+               </div>
               </li>
               <li class="list-item">
                <img src="./images/box 3.jpg" alt="разработка приложений"width="370" height="294" >
+               <div class="overlay-apps">
+                <p class="app">Мобильные приложения</p>
+              </div>
               </li>
                 <li class="list-item">
                  <img src="./images/img (1).jpg" alt="дизайн" width="370" height="294">
+                 <div class="overlay-apps">
+                  <p class="app">Дизайнерские решения</p>
+                </div>
                 </li>               
             </ul>
            </div>
