--- a/portfolio.html
+++ b/portfolio.html
@@ -74,67 +74,94 @@
               </ul>
               <ul class="image-list">
                   <li class="image-item">
-                    <a class="project-link">
+                    <div class="relative-thumb">
                       <img src="./images/port (9).jpg" alt="Технокряк" width="370" height="294">
+                      <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
+                    <div class="thumb">
                       <h2 class="image-name">Технокряк</h2>
                       <p class="type">Веб-сайт</p>
-                    </a>
+                    </div> 
                   </li>
                   <li class="image-item">
-                    <a class="project-link">
-                    <img src="./images/port (8).jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h2 class="image-name">Постер New Orlean vs Golden Star </h2>
+                    <div class="relative-thumb">
+                      <img src="./images/port (8).jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                      <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
+                    <div class="thumb">
+                      <h2 class="image-name">Постер New Orlean vs Golden Star </h2>
                     <p class="type">Дизайн</p>
-                    </a>
+                    </div>   
                   </li>
                   <li class="image-item">
-                    <a class="project-link" >
-                    <img src="./images/port (7).jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h2 class="image-name">Ресторан Seafood</h2>
-                    <p class="type">Приложение</p> 
-                    </a>
+                    <div class="relative-thumb">
+                      <img src="./images/port (7).jpg" alt="Ресторан Seafood" width="370" height="294">
+                      <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
+                    <div class="thumb">
+                      <h2 class="image-name">Ресторан Seafood</h2>
+                      <p class="type">Приложение</p> 
+                    </div>
                   </li>
                   <li class="image-item">
-                    <a class="project-link">
-                    <img src="./images/port (6).jpg" alt="Проект Prime" width="370" height="294">
-                    <h2 class="image-name">Проект Prime</h2>
-                    <p class="type">Маркетинг</p>
-                    </a>
+                    <div class="relative-thumb">
+                      <img src="./images/port (6).jpg" alt="Проект Prime" width="370" height="294">
+                      <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
+                    <div class="thumb">
+                      <h2 class="image-name">Проект Prime</h2>
+                      <p class="type">Маркетинг</p>
+                    </div>  
                 </li>
                 <li class="image-item">
-                  <a class="project-link">
-                  <img src="./images/port (5).jpg" alt="Проект Boxes" width="370" height="294">
-                  <h2 class="image-name">Проект Boxes </h2>
-                  <p class="type">Приложение</p>
-                  </a>
+                  <div class="relative-thumb">
+                    <img src="./images/port (5).jpg" alt="Проект Boxes" width="370" height="294">
+                    <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  <div class="thumb">
+                    <h2 class="image-name">Проект Boxes </h2>
+                    <p class="type">Приложение</p>
+                  </div>
                 </li>
                 <li class="image-item">
-                  <a class="project-link">
-                  <img src="./images/port (1).jpg" alt="Inspiration has no Borders" width="370" height="294">
-                  <h2 class="image-name">Inspiration has no Borders</h2>
-                  <p class="type">Веб-сайт</p> 
-                  </a>
+                  <div class="relative-thumb">
+                    <img src="./images/port (1).jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  <div class="thumb">
+                    <h2 class="image-name">Inspiration has no Borders</h2>
+                    <p class="type">Веб-сайт</p>
+                  </div>
                 </li>
                 <li class="image-item">
-                  <a class="project-link" >
-                  <img src="./images/port (4).jpg" alt="Издание Limited Edition" width="370" height="294">
-                  <h2 class="image-name">Издание Limited Edition</h2>
-                  <p class="type">Дизайн</p>
-                  </a>
+                  <div class="relative-thumb">
+                    <img src="./images/port (4).jpg" alt="Издание Limited Edition" width="370" height="294">
+                   <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  <div class="thumb">
+                    <h2 class="image-name">Издание Limited Edition</h2>
+                    <p class="type">Дизайн</p>
+                  </div>
               </li>
               <li class="image-item">
-                <a class="project-link" >
-                <img src="./images/port (3).jpg" alt="Проект LAB" width="370" height="294">
-                <h2 class="image-name">Проект LAB </h2>
-                <p class="type">Маркетинг</p>
-                </a>
+                <div class="relative-thumb">
+                  <img src="./images/port (3).jpg" alt="Проект LAB" width="370" height="294">
+                  <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p> 
+                </div>
+                <div class="thumb">
+                  <h2 class="image-name">Проект LAB </h2>
+                  <p class="type">Маркетинг</p>
+                </div>
               </li>
               <li class="image-item">
-                <a class="project-link">
+              <div class="relative-thumb">
                 <img src="./images/port (2).jpg" alt="Growing Business" width="370" height="294">
+                <p class="project-info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>  
+              </div>
+              <div class="thumb">
                 <h2 class="image-name">Growing Business</h2>
                 <p class="type">Приложение</p> 
-                </a>
+              </div>
               </li>   
               </ul>
             </div>  
