--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
      <!--Навігація у шапці-->
-     <header>
+     <header class="border-line">
       <div class="container line">
         <nav class="main-nav">
           <a class="logo" href="./index.html">
